--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "author": "Gavin<gavin.tech@qq.com>",
     "private": true,
     "scripts": {
-        "dev": "webpack-dev-server --inline --host 0.0.0.0 --progress --config build/webpack.dev.conf.js",
+        "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
         "start": "npm run dev",
         "lint": "eslint --ext .js,.vue src",
         "build": "node build/build.js"
@@ -16,7 +16,7 @@
         "vue": "^2.5.2",
         "vue-router": "^3.0.1",
         "vux": "^2.9.4",
-        "weixin-js-sdk": "^1.3.3"
+        "weixin-js-sdk": "^1.4.0-test"
     },
     "devDependencies": {
         "autoprefixer": "^7.1.2",
